// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emSize should add width & height if not present 1`] = `
"<svg width=\\"1em\\" height=\\"1em\\">
  <g stroke=\\"#063855\\" strokeWidth={2} />
</svg>
"
`;

exports[`emSize should keep other attributes 1`] = `
"<svg viewBox=\\"0 0 10 10\\" width=\\"1em\\" height=\\"1em\\">
  <g stroke=\\"#063855\\" strokeWidth={2} />
</svg>
"
`;

exports[`emSize should replace width and height value by 1em 1`] = `
"<svg width=\\"1em\\" height=\\"1em\\">
  <g stroke=\\"#063855\\" strokeWidth={2} />
</svg>
"
`;
